<resources>
    <string name="app_name">DondeEstaMiCoche</string>
    <string name="memorizar_posici_n">Memorizar Posición</string>
    <string name="encontrar_tu_coche">Encontrar tu Coche</string>
    <string name="lugares_guardados">Lugares Guardados</string>
    <string name="ajustes">Ajustes</string>
    <string name="foto_aparcamiento">Foto del aparcamiento</string>
    <string name="borrar_historial">Borrar historial</string>
    <string name="configurar_radio_de_busqueda">Configurar radio de busqueda</string>
    <string name="gesti_n_de_permisos">Gestión de permisos</string>
    <string name="memoria">MEMORIA</string>
    <string name="encontrar">ENCONTRAR</string>
    <string name="lugares">LUGARES</string>
    <string name="ajustes2">AJUSTES</string>
    <string name="alarma">ALARMA</string>
    <string name="calendario">CALENDARIO</string>
    <string name="compartir">COMPARTIR</string>
    <string name="aparcamientos">APARCAMIENTOS</string>
    <string name="direcci_n">Dirección</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="fecha_y_hora">Fecha y hora</string>
    <string name="fecha_y_hora_de_salida_no_registrada">Fecha y hora de salida: No registrada</string>
    <string name="ya_no_estoy_aparcado">Ya no estoy aparcado</string>
    <string name="ver_en_mapa">Ver en mapa</string>
    <string name="compartir_ubicaci_n">Compartir ubicación</string>
    <string name="eliminar_aparcamiento">Eliminar aparcamiento</string>
    <string name="cerrar">Cerrar</string>
    <string name="deseas_tomar_una_foto_para_a_adir_al_aparcamiento">¿Deseas tomar una foto para añadir al aparcamiento?</string>
    <string name="s">Sí</string>
    <string name="no">No</string>
    <string name="detener_alarma">Detener alarma</string>
    <string name="es_hora_de_mover_el_vehiculo">Es hora de mover el vehiculo</string>
    <string name="nombre_del_aparcamiento">Nombre del aparcamiento</string>
    <string name="direcci_n2">Dirección</string>
    <string name="fecha_y_hora_01_01_2024_12_00">Fecha y hora: 01/01/2024 12:00</string>
    <string name="coordenadas_0_0_0_0">Coordenadas: 0.0, 0.0</string>
    <string name="nombre_del_lugar">Nombre del lugar</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="desea_guardar_la_nueva_posici_n_del_aparcamiento">¿Desea guardar la nueva posición del aparcamiento?</string>
    <string name="publicidad_aqu">¡Publicidad aquí!</string>
    <string name="memorizar_ubicaci_n">Memorizar ubicación</string>
    <string name="lugares_donde_he_aparcado">Lugares donde he aparcado</string>
    <string name="encontrar_coche">Encontrar coche</string>
    <string name="aparcamientos_p_blicos_cercanos">Aparcamientos públicos cercanos</string>
    <string name="poner_alarma">Poner alarma</string>
    <string name="ajustes_de_la_aplicaci_n">Ajustes de la aplicación</string>
    <string name="agregar_nota_al_calendario">Agregar nota al calendario</string>
    <string name="compartir_ubicaci_n_actual">Compartir ubicación actual</string>
    <string name="imagen_principal_de_la_aplicaci_n">Imagen principal de la aplicación</string>
    <string name="imagen_de_ajustes">Imagen de ajustes</string>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
</resources>