<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_photo"/>

        <TextView
            android:id="@+id/tvDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direcci_n"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/gold" />

        <TextView
            android:id="@+id/tvCoordenadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordenadas"
            android:layout_marginTop="8dp"
            android:textColor="@color/gold" />

        <TextView
            android:id="@+id/tvFechaHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_y_hora"
            android:layout_marginTop="8dp"
            android:textColor="@color/gold" />

        <TextView
            android:id="@+id/tvFechaHoraSalida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_y_hora_de_salida_no_registrada"
            android:layout_marginTop="8dp"
            android:textColor="@color/gold" />


        <TextView
            android:id="@+id/btnNoAparcado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ya_no_estoy_aparcado"
            android:layout_marginTop="8dp"
            android:background="@drawable/fancy_button"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/btnVerEnMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver_en_mapa"
            android:layout_marginTop="8dp"
            android:background="@drawable/fancy_button"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/btnCompartirUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compartir_ubicaci_n"
            android:layout_marginTop="8dp"
            android:background="@drawable/fancy_button"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center" />


        <TextView
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eliminar_aparcamiento"
            android:layout_marginTop="8dp"
            android:background="@drawable/fancy_button"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/btnCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar"
            android:background="@drawable/fancy_button"
            android:padding="13dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
