<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    android:background="?attr/colorSurface">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/fancy_button">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_lugar"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvCoordenadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coordenadas_0_0_0_0"
                android:textSize="14sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvFechaHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_y_hora_01_01_2024_12_00"
                android:textSize="14sp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <View
            android:id="@+id/semaforo"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/semaforo_red" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
